samples/_failures_safe/1761206499_0c1c55_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ee871ae.c: In function ‘main’:
./samples/SAFE/__tmp_5ee871ae.c:167:9: error: expected declaration or statement at end of input
  167 |         free_matrix(mat2);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_5ee871ae.c:167:9: error: expected declaration or statement at end of input
